--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -15,7 +15,7 @@
     "appliances": "Appliances",
     "add_appliances": "Add appliances.",
     "appliance_things_to_do": "THINGS TO DO",
-    "favorites": "FAVORITE",
+    "favorites": "FAVORITE999",
     "more": "MORE",
     "rooms": "Rooms",
     "service": "Service",
