--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -15,7 +15,7 @@
     "appliances": "Appliances",
     "add_appliances": "Add appliances.",
     "appliance_things_to_do": "THINGS TO DO",
-    "favorites": "FAVORITE999",
+    "favorites": "FAVORITE",
     "more": "MORE",
     "rooms": "Rooms",
     "service": "Service",
@@ -2313,7 +2313,7 @@
     "storage_assistance": "Storage assistance",
     "auto_connect_fail": "Automatic connection failed, please open settings and manually connect to the HIS-**** network.",
     "recommendation": "fridge",
-    "useage_prequency_metrics": "Useage prequency metrics",
+    "useage_prequency_metrics": "Usage frequency metrics",
     "number_of_door_openings": "Number of door openings",
     "russia_cfm_title": "Are you a Russian citizen?",
     "russia_cfm_content": "Due to Russian legislation, Russian citizens have to select Russia as a country to comply with Russian requirements for the localization of personal data.",
@@ -3081,7 +3081,7 @@
     "bundling_detection": "Bundling detection",
     "change_language_tips": "Change the display language on your device.",
     "change_brightness_tips": "Adjust the brightness on your device display.",
-    "dishwashing_asist": "Dishwashing asist",
+    "dishwashing_assist": "Dishwashing assist",
     "load": "Load",
     "change_load_level_tips": "Adjust the load level to the amount loaded to save energy.",
     "passed": "passed",
@@ -3406,7 +3406,7 @@
     "auto_super_rinse_desc": "The function helps to ensure that clothes are being cleaned thoroughly, without leaving any residual detergent or dirt behind.",
     "enable_auto_super_rinse": "Enable/disable Auto super rinse",
     "dw_super_rinse": "Super rinse",
-    "dw_uv_mode": "UV mode",
+    "dw_uv_mode": "UV Mode",
     "dw_storage_mode": "Storage mode",
     "air_shower": "Air shower",
     "enable_air_shower": "Enable/disable Air shower",
@@ -3569,8 +3569,8 @@
     "can_not_find_device": "Can’t find the device?",
     "state": "state",
     "unchanged": "unchanged",
-    "circle_key": "Circle",
-    "swp_key": "swp",
+    "circle_key": "Cycle",
+    "swp_key": "SWP",
     "fast_dhw_des": "When turned on, the heating function of the heat pump and the water tank will be turned on at the same time to generate hot water at the fastest speed.",
     "atw_night_des": "When turned on, the outdoor unit will automatically adjust to low noise mode to reduce noise.",
     "atw_mute_des": "When turned on, the outdoor unit will automatically run the low noise mode according to the time set by the wire controller.",
@@ -3673,7 +3673,6 @@
     "favorite_name": "Favorite name",
     "weekly_key": "weekly",
     "all_day": "all day",
-    "floor_key": "floor",
     "asko_oven_display_setting_content": "Configure the settings for your oven display.",
     "asko_oven_brightness_content": "The brightness of the oven display and keys is automatically adjusted based on the illumination of the room.",
     "asko_oven_display_content": "Set the font size for text on the oven display.",
@@ -3709,6 +3708,46 @@
     "dryer_link_tips": "With Dryer link function enabled, your washing program is transfered automatically to selected tumble dryer after washing is finished.",
     "enable_on_this_appliance": "Enable on this appliance",
     "dryer_link_notes": "To link your washing machine and tumble dryer make sure the connection is setup on your tumble dryer.",
+    "asko_oven_mode_setting_content": "Special modes can be set for different occasions. Configure for each mode how it should behave when the mode is active.",
+    "steam_disinfection": "Steam disinfection",
+    "asko_oven_light_brightness": "Light brightness",
+    "asko_oven_sound_alarms": "Sounds / Alarms",
+    "asko_oven_eco_mode_content": "Helps reduce energy consumption and saves electricity. Appliance will continue to operate, while extra functions like light, display, proximity and door sensor will be disabled.",
+    "dw_error_desc_f11": "Water outlet",
+    "dw_error_desc_f12": "Water inlet",
+    "dw_error_desc_f40": "Inlet valve",
+    "dw_error_desc_f41": "Heater",
+    "dw_error_desc_f42": "Temperature sensor",
+    "dw_error_desc_f43": "Pressure sensor",
+    "dw_error_desc_f54": "Overfilling water",
+    "dw_error_desc_f56": "Circulation",
+    "dw_error_desc_f65": "Display board",
+    "asko_oven_sabbath_mode_content": "Appliance will go to Sabbath Mode at your set date, time and duration. Lock function will be disabled during Sabbath Mode.",
+    "asko_oven_activate_weekly": "Activate weekly",
+    "asko_oven_sabbath_bottom_content": "To deactivate Sabbath Mode, press the Lock icon on the oven display for 3 seconds.",
+    "asko_oven_during_sabbath_mode": "DURING SABBATH MODE",
+    "asko_oven_during_sabbath_mode_content": "During Sabbath Mode there is a possibility to automatically have a cooking program starting and stopping.",
+    "asko_oven_program": "Oven program",
+    "asko_oven_program_setup": "Program setup",
+    "asko_oven_start_oven_program": "Start oven program",
+    "asko_oven_stop_oven_program": "Stop oven program",
+    "asko_oven_sound_setting_content": "Set the volume and of the different sounds for your oven.",
+    "asko_oven_ambient_sounds": "AMBIENT SOUNDS",
+    "asko_oven_ambient_sounds_content": "For example starting and stopping a program.",
+    "asko_oven_navigation_content": "For example key sounds.",
+    "dw_smart_dry": "Smart Dry",
+    "dw_remote_guide_hx": "Please press#and then@. APP will flash on the display.",
+    "dw_remote_guide_eu": "Please press%button on the control panel to enable it",
+    "atw_no_device_confirm_first": "1. Please ensure network stability.",
+    "atw_no_device_confirm_second": "2. Please ensure the reliability of the connection of the air conditioning system.",
+    "voice_assistant_commands": "Voice Assistant Commands",
+    "edit_favorites": "Edit favorites",
+    "dom_hot_water": "DOMESTIC HOT WATER",
+    "delete_all_schedu_tips": "Are you sure you want to delete all Scheduling?",
+    "edit_scheduling": "Edit Scheduling",
+    "target_key": "target",
+    "asko_oven_factory_reset_content": "The appliance can be reset back to factory defaults.  All personal settings and stored data will be lost.",
+    "invalid_input": "Invalid Input.",
     "key": "English",
     "filename": "i18n_en.json",
     "asko_td_eco_cotton": "ECO cotton",
