--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -726,7 +726,7 @@
     "bake_baking_stopped": "Baking stopped",
     "hisrf_view_inside": "View inside",
     "hisrf_shopping_list": "Shopping list",
-    "hisrf_food_management": "Food management",
+    "hisrf_food_management": "Food inventory",
     "hisrf_electricity_statistics_menu": "energy  monitoring",
     "hisrf_fresh_choice": "My fresh choice",
     "hisrf_service_hint": "Please contact the after sale service.",
@@ -925,7 +925,7 @@
     "oven_atag_extra_gentle_tips": "This function is all about gentle, slow and even baking. This way, the moisture is locked inside and the food stays super tender and juicy. Suitable for preparing meat, fish or pastry on one level.",
     "setting_have_sent": "Settings have been sent to oven!",
     "pull_to_refresh": "PULL TO REFRESH",
-    "APPETIZER": "Appetizer",
+    "APPETIZER": "Appetizers",
     "BREAKFAST_AND_BRUNCH": "Breakfast and brunch",
     "DESSERT": "Dessert",
     "LUNCH_AND_SNACKS": "Lunch and snacks",
@@ -1993,7 +1993,7 @@
     "bio14_cs_step2": "If the Wi-Fi symbol is visible, skip this step.\nIf the Wi-Fi symbol is not visible, tap 'Wi-Fi OFF/ON'.\nSelect 'ON' and tap the Confirm key. \nDevice Wi-Fi is ready for connection (Wi-Fi symbol is shown on the main screen).",
     "bio14_cs_step3": "Select 'CONNECTION SETUP' and confirm it by tapping 'SETUP'.\nThe countdown timer will pop up.\nThe device network is now open for connection for 5 minutes. \nClick NEXT to continue.",
     "bio14_p_step1": "Turn on the oven.\nTap the 'plus' symbol in the top left corner of the main screen to open the menu.\nSelect 'SETTINGS'.\nSelect 'NETWORK CONNECTION'.",
-    "bio14_p_step2": "Select 'PAIRING' and confirm it by tapping 'PAIR'.\nThe countdown timer will pop up.\nThe device network is now open for connection for 3 minutes. \nClick NEXT to continue.",
+    "bio14_p_step2": "Select 'PAIRING' and confirm it by tapping 'PAIR'.\nThe countdown timer will pop up.\nThe device network is now open for pairing for 3 minutes.\nClick NEXT to continue.",
     "oven_atag_mode_68": "Large grill steak pro",
     "oven_atag_mode_69": "Large grill pro",
     "oven_atag_mode_70": "Large grill + Fan pro",
@@ -2312,7 +2312,7 @@
     "search_device_in_your_network": "Searching for devices in your network.",
     "storage_assistance": "Storage assistance",
     "auto_connect_fail": "Automatic connection failed, please open settings and manually connect to the HIS-**** network.",
-    "recommendation": "fridge",
+    "recommendation": "Recommendation:",
     "useage_prequency_metrics": "Usage frequency metrics",
     "number_of_door_openings": "Number of door openings",
     "russia_cfm_title": "Are you a Russian citizen?",
@@ -3247,7 +3247,7 @@
     "hide_program": "Hide program",
     "hide_program_desc": "If activated it will make the program not visible on your device and app.",
     "water_drain_desc": "This feature lets you choose what the appliance should do with the condensate water produced while drying. “Tank” means that this water is collected in the dedicated water tank and should be periodically emptied. “Drain” means that the user connected the appliance to a waste drain, so the water can be disposed of directly, bypassing the tank.",
-    "water_drain_tips": "Note: This feature is initially set on the appliance. The default option selected on the appliance will be shown here.",
+    "water_drain_tips": "This feature is initially set on the appliance. The default option selected on the appliance will be shown here.",
     "air_care_general": "General",
     "air_care_pet": "Pet",
     "air_care_child": "Child",
@@ -3415,9 +3415,8 @@
     "use_humidity": "Use humidity box to regulate humidity",
     "same_day": "On same day",
     "w_temp_set": "What temperature to set?",
-    "asko": "ASKO",
     "eco_meter": "Eco Meter",
-    "asko_eco_meter_desc": "ASKO Eco Meter is a helpful smart indicator to determinate your environmental impact based on chosen program and extra options when it comes to energy, water and detergent consumption.",
+    "asko_eco_meter_desc": "## is a helpful smart indicator to determinate your environmental impact based on chosen program and extra options when it comes to energy, water and detergent consumption.",
     "wm86_autodose_desc": "Instead of making it to a struggle let the washing machine measure exactly the right dosage of detergent. Our washing machines with Auto Dose system measure the detergent against wash load, dirtiness level, water hardness, program type and temperature. Always perfect dosage and no more overdosing. Here you can adjust your default settings for Auto Dose.",
     "enable_auto_dose": "Enable/disable Auto Dose",
     "enable_auto_dose_desc": "This will enable/disable on your device.",
@@ -3507,7 +3506,7 @@
     "clean_status": "Clean Status",
     "tomorrow": "Tomorrow",
     "have_added_x_inverters": "You have added *** Inverter(s).",
-    "requst_qr_code_from_supplier": "Please request the QR code from the supplier.",
+    "requst_qr_code_from_supplier": "Please request the QR code from the installer.",
     "have_qr_code": "I have the QR code",
     "name_assignment_your_device": "Name and assignment your device",
     "name_and_assign_to_room": "Name your device and assign it to a room.",
@@ -3543,7 +3542,7 @@
     "search_again": "search again",
     "confirm_add": "CONFIRM TO ADD",
     "search_device": "Searching for device ...",
-    "search_device_content": "Operate the wall wired remote control, the device card will be highlighted, and the corresponding air conditioner can be accurately found.",
+    "search_device_content": "Please click the \"Search Again\" button to update the device list",
     "devices_manage": "Devices management",
     "goto_home": "Go to the device homepage",
     "show_result": "show result",
@@ -3567,9 +3566,9 @@
     "browse_more_recipes": "Browse more recipes",
     "no_scheduling_set": "No schedules set",
     "add_new": "Add New",
-    "chef_recipe": "Chef recipe",
+    "chef_recipe": "Chef Recipe",
     "recipe_assistant": "Recipe Assistant",
-    "shopping_list": "Shoppinglist",
+    "shopping_list": "Shopping List",
     "scanned_code_not_recognized": "Scanned code was not recognized",
     "scan_correct_device_code": "Scan correct device code",
     "best_for": "Best for ##",
@@ -3583,10 +3582,10 @@
     "refr_exit_super_freeze_tips": "Now turn on Super Cool mode and exit Super Freeze mode",
     "enter_recipe_name": "Enter recipe name...",
     "results": "results",
-    "no_favourite_recipes": "No favourite recipes",
-    "no_favourite_recipes_desc": "Click on the ## symbol on the recipe to add a favourite recipe.",
+    "no_favourite_recipes": "No favorite recipes",
+    "no_favourite_recipes_desc": "Click on the ## symbol on the recipe to add a favorite recipe.",
     "management": "management",
-    "clear_all_favourites": "Clear all favourites",
+    "clear_all_favourites": "Clear all favorites",
     "dish_type": "Dish Type",
     "main_ingredients": "Main ingredients",
     "diet": "Diet",
@@ -3651,8 +3650,8 @@
     "online_tip": "online",
     "atw_tip": "ATW",
     "close_all": "close all",
-    "circle_mode_des": "Circle1 and Circle2 share the same working mode.",
-    "select_c_m": "SELECT CIRCLE MODE",
+    "circle_mode_des": "Cycle1 and Cycle2 share the same working mode.",
+    "select_c_m": "SELECT CYCLE MODE",
     "favorite_name": "Favorite name",
     "weekly_key": "weekly",
     "all_day": "all day",
@@ -3680,7 +3679,7 @@
     "asko_oven_door_sensor_wake_up_content": "The oven can wake up if your presence is detected by the proximity sensor and on door opening. Be aware this will increase the power consumption.",
     "asko_oven_brand_splash": "Brand splash",
     "asko_oven_brand_splash_content": "Show the brand splash video during startup and shut down.",
-    "jchoem_privacy_desc": "Please note that Johson Controls  does not manage or control this Application. Your data will be processed in accordance with ConnectLife/Hisense's Privacy Policy, provided on the next screen.",
+    "jchoem_privacy_desc": "Please note that Johnson Controls  does not manage or control this Application. Your data will be processed in accordance with third party's Privacy Policy, provided on the next screen.",
     "asko_oven_inactivity_time_out": "INACTIVITY TIME-OUT",
     "asko_oven_inactivity_time_out_content": "Set after how many minutes the appliance will go to clock screen.",
     "asko_oven_duration_of_clock": "DURATION OF CLOCK",
