--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -3942,6 +3942,6 @@
     "wm86_and_td76_ui1_step1": "Uključite uređaj. Okrenite gumb ulijevo za pristup \"Daljinsko pokretanje\" i kliknite na \"Unos postavki\".",
     "wm86_and_td76_ui1_cs_step2": "Okrenite gumb za pomak na \"Connection setup\" i kliknite na \"Enter\".",
     "wm86_and_td76_ui1_p_step2": "Okrenite tipku za prijelaz na \"Dodaj uređaj\" i kliknite na \"Enter\".",
-    "how_data_is_calculate_key": "Kako se izračunavaju podaci",
-    "energy_select_device_ktip_key": "Imajte na umu da možete pokrenuti samo ECO način rada uređaja koji rade."
+    "how_data_is_calculate_key": "Kako se podaci računaju",
+    "energy_select_device_ktip_key": "Imajte na umu da ECO način rada možete pokrenuti samo na aktivnim uređajima."
 }
